--- a/TiendaVirtualAlejandro/Views/Shared/_Layout.cshtml
+++ b/TiendaVirtualAlejandro/Views/Shared/_Layout.cshtml
@@ -25,6 +25,10 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    @if (!User.Identity.Name.Equals(""))
+                    {
+                        <li>@Html.ActionLink("PROFILE", "Profile", "Home")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
