fotos de algunos productos

--- a/TiendaVirtualAlejandro/Views/Producto/Details.cshtml
+++ b/TiendaVirtualAlejandro/Views/Producto/Details.cshtml
@@ -27,11 +27,10 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Foto)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Foto)
+            <img src="~/Content/Fotos/@Model.Foto" />
         </dd>
 
     </dl>
