--- a/TiendaVirtualAlejandro/Views/Producto/Delete.cshtml
+++ b/TiendaVirtualAlejandro/Views/Producto/Delete.cshtml
@@ -35,6 +35,14 @@
             @Html.DisplayFor(model => model.Foto)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Descripción)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Descripción)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
