--- a/TiendaVirtualAlejandro/Views/Producto/Details.cshtml
+++ b/TiendaVirtualAlejandro/Views/Producto/Details.cshtml
@@ -27,10 +27,19 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Foto)
         </dt>
 
         <dd>
-            <img src="~/Content/Fotos/@Model.Foto" />
+            @Html.DisplayFor(model => model.Foto)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Descripción)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Descripción)
         </dd>
 
     </dl>
