MiCarrito CarritoCompraModelBinder y Sessions

--- a/TiendaVirtualAlejandro/Views/Shared/_Layout.cshtml
+++ b/TiendaVirtualAlejandro/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <li>@Html.ActionLink("Mis Pedidos", "Index", "Pedido")</li>
                         <li>@Html.ActionLink("Mi Perfil", "MiPerfil", "Cliente")</li>
                     }
-                    <li>@Html.ActionLink("Carrito de Compra", "About", "Home")</li>
+                    <li>@Html.ActionLink("Carrito de Compra", "MiCarrito", "Pedido")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
