--- a/TiendaVirtualAlejandro/Views/Producto/Index.cshtml
+++ b/TiendaVirtualAlejandro/Views/Producto/Index.cshtml
@@ -25,6 +25,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Category)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Stock.Cantidad)
+        </th>
         <th></th>
     </tr>
 
@@ -46,6 +49,10 @@
         @Html.DisplayFor(modelItem => item.Category)
     </td>
     <td>
+        @Html.DisplayFor(modelItem => item.Stock.Cantidad)
+    </td>
+    <td>
+        @Html.ActionLink("Add To Cart", "AddToCart", new { id = item.Id }) |
         @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
         @Html.ActionLink("Details", "Details", new { id = item.Id }) |
         @Html.ActionLink("Delete", "Delete", new { id = item.Id })
