--- a/TiendaVirtualAlejandro/Views/Pedido/MiCarrito.cshtml
+++ b/TiendaVirtualAlejandro/Views/Pedido/MiCarrito.cshtml
@@ -13,17 +13,40 @@
     </dl>
 </div>
 <p>
-    @if (Model != null && Model.Count > 0)
-    {
-        foreach (var item in Model)
+    <table class="table">
+        <tr>
+            <th>
+                @Html.Label("Producto")
+            </th>
+            <th>
+                @Html.LabelFor(i => Model.Keys.First().Nombre)
+            </th>
+            <th>
+                @Html.LabelFor(i => Model.Keys.First().Precio)
+            </th>
+            <th>
+                @Html.LabelFor(i => Model.Keys.First().Stock.Cantidad)
+            </th>
+        </tr>
+        @if (Model != null && Model.Count > 0)
         {
-            <dt>
-                @Html.NameFor(i => item.Nombre)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(i => item.Nombre)
-            </dd>
+            foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        <img src="~/Content/Fotos/@item.Key.Foto" style="width:50px;height:50px;" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(i => item.Key.Nombre)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(i => item.Key.Precio)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(i => item.Value)
+                    </td>
+                </tr>
+            }
         }
-    }
+    </table>
 </p>
