--- a/TiendaVirtualAlejandro/Views/Producto/Edit.cshtml
+++ b/TiendaVirtualAlejandro/Views/Producto/Edit.cshtml
@@ -26,6 +26,14 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.Cantidad, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Cantidad, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Cantidad, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.Precio, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Precio, new { htmlAttributes = new { @class = "form-control" } })
