--- a/TiendaVirtualAlejandro/Views/Producto/Index.cshtml
+++ b/TiendaVirtualAlejandro/Views/Producto/Index.cshtml
@@ -49,10 +49,20 @@
         @Html.DisplayFor(modelItem => item.Category)
     </td>
     <td>
-        @Html.DisplayFor(modelItem => item.Cantidad)
+        @if (item.Cantidad > 0)
+        {
+            @Html.DisplayFor(modelItem => item.Cantidad);
+        }
+        else
+        {
+            @Html.Label("Sin stock");
+        }
     </td>
     <td>
-        @Html.ActionLink("Add To Cart", "AddToCart", new { id = item.Id }) |
+        @if (item.Cantidad > 0)
+        {
+            @Html.ActionLink("Add To Cart", "AddToCart", new { id = item.Id }, new { htmlAttributes = new { @class = "form-control" } })
+        }
         @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
         @Html.ActionLink("Details", "Details", new { id = item.Id }) |
         @Html.ActionLink("Delete", "Delete", new { id = item.Id })
