--- a/TiendaVirtualAlejandro/Views/Producto/Details.cshtml
+++ b/TiendaVirtualAlejandro/Views/Producto/Details.cshtml
@@ -45,7 +45,7 @@
         </dt>
 
         <dd>
-            <img src="~/Content/Fotos/@Model.Foto" />
+            <img src="~/Content/Fotos/@Model.Foto" style="max-width: 500px" />
         </dd>
 
         <dt>
@@ -61,8 +61,8 @@
 <p>
     @if (Model.Cantidad > 0)
     {
-        @Html.ActionLink("Add To Cart", "AddToCart", new { id = Model.Id }) @Html.Value("|")
-    }
+        @Html.ActionLink("Add To Cart", "AddToCart", new { id = Model.Id })
+    } |
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
