--- a/TiendaVirtualAlejandro/Views/Producto/Index.cshtml
+++ b/TiendaVirtualAlejandro/Views/Producto/Index.cshtml
@@ -34,13 +34,13 @@
 @foreach (var item in Model) {
 <tr>
     <td>
-        @Html.DisplayFor(modelItem => item.Nombre)
+        @Html.ActionLink(item.Nombre, "Details", new { id = item.Id })
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.Precio)
     </td>
     <td>
-        <img src="~/Content/Fotos/@item.Foto" />
+        <img src="~/Content/Fotos/@item.Foto" style="max-width: 100px;" />
     </td>
     <td>
         @Html.DisplayFor(modelItem => item.Descripción)
@@ -62,7 +62,7 @@
         @if (item.Cantidad > 0)
         {
             @Html.ActionLink("Add To Cart", "AddToCart", new { id = item.Id }, new { htmlAttributes = new { @class = "form-control" } })
-        }
+        } |
         @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
         @Html.ActionLink("Details", "Details", new { id = item.Id }) |
         @Html.ActionLink("Delete", "Delete", new { id = item.Id })
