Añadido Stock en el modelo

--- a/TiendaVirtualAlejandro/Views/Pedido/Details.cshtml
+++ b/TiendaVirtualAlejandro/Views/Pedido/Details.cshtml
@@ -19,10 +19,10 @@
                 @Html.Label("Producto")
             </th>
             <th>
-                @Html.LabelFor(i => Model.Producto.First().Nombre)
+                @Html.LabelFor(i => Model.Stock.First().Producto.Nombre)
             </th>
             <th>
-                @Html.LabelFor(i => Model.Producto.First().Precio)
+                @Html.LabelFor(i => Model.Stock.First().Producto.Precio)
             </th>
             <th>
                 @Html.Label("Cantidad comprada")
@@ -33,25 +33,25 @@
             <th>
             </th>
         </tr>
-        @if (Model != null && Model.Producto.Count > 0)
+        @if (Model != null && Model.Stock.Count > 0)
         {
-            foreach (var item in Model.Producto)
+            foreach (var item in Model.Stock)
             {
                 <tr>
                     <td>
-                        <img src="~/Content/Fotos/@item.Foto" style="max-width: 64px;" />
+                        <img src="~/Content/Fotos/@item.Producto.Foto" style="max-width: 64px;" />
                     </td>
                     <td>
-                        @Html.ActionLink(item.Nombre, "Details", "Producto", new { id = item.Id }, null)
+                        @Html.ActionLink(item.Producto.Nombre, "Details", "Producto", new { id = item.Id }, null)
                     </td>
                     <td>
-                        @Html.DisplayFor(i => item.Precio) €/Kg
+                        @Html.DisplayFor(i => item.Producto.Precio) €/Kg
                     </td>
                     <td>
                         @Html.DisplayFor(c => item.Cantidad) Kg <!--value-->
                     </td>
                     <td>
-                        @(item.Precio * item.Cantidad) € <!--value-->
+                        @(item.Producto.Precio * item.Cantidad) € <!--value-->
                     </td>
                     <td>
                     </td>
