--- a/TiendaVirtualAlejandro/Views/Producto/Delete.cshtml
+++ b/TiendaVirtualAlejandro/Views/Producto/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TiendaVirtualAlejandro.Models.Producto
+﻿@model TiendaVirtualAlejandro.Models.ProductoAlmacen
 
 @{
     ViewBag.Title = "Delete";
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Descripción)
+            @Html.DisplayNameFor(model => model.Descripcion)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Descripción)
+            @Html.DisplayFor(model => model.Descripcion)
         </dd>
 
     </dl>
