Añadida la opción de tramitar pedido

--- a/TiendaVirtualAlejandro/Views/Cliente/Details.cshtml
+++ b/TiendaVirtualAlejandro/Views/Cliente/Details.cshtml
@@ -27,16 +27,16 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.EmailId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Email)
+            @Html.DisplayFor(model => model.EmailId)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.EmailId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
