--- a/TiendaVirtualAlejandro/Views/Cliente/Index.cshtml
+++ b/TiendaVirtualAlejandro/Views/Cliente/Index.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.Apellidos)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.EmailId)
         </th>
         <th></th>
     </tr>
@@ -33,12 +33,12 @@
                 @Html.DisplayFor(modelItem => item.Apellidos)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Email)
+                @Html.DisplayFor(modelItem => item.EmailId)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.ActionLink("Edit", "Edit", new { id = item.EmailId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.EmailId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.EmailId })
             </td>
         </tr>
     }
