--- a/TiendaVirtualAlejandro/Views/Pedido/Edit.cshtml
+++ b/TiendaVirtualAlejandro/Views/Pedido/Edit.cshtml
@@ -15,7 +15,7 @@
         <h4>Pedido</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.PedidoId)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
